k8s/base/redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartord-rd
  labels:
    app: cartord-rd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cartord-rd
  template:
    metadata:
      labels:
        app: cartord-rd
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 999
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: cartord-rd
  labels:
    app: cartord-rd
spec:
  selector:
    app: cartord-rd
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
